--- a/public/resume.html
+++ b/public/resume.html
@@ -233,7 +233,7 @@
                         <li>Phone: 18810229320</li>
                         <li>Blog: <a href="https://blog.a1ex.wang">a1exwang&#39;s Blog</a>
                         </li>
-                        <li><a href="https://github.com/a1exwang/">Github</a>  <a href="http://stackoverflow.com/users/4715389/alex-wang">Stackoverflow</a> 
+                        <li><a href="https://github.com/a1exwang/">Github</a>, <a href="http://stackoverflow.com/users/4715389/alex-wang">Stackoverflow</a>,
                             <a
                             href="http://git.oschina.net/alexw">Git@OSC</a>
                         </li>
